# abstractive-factual-tradeoff

./: .gitignore  README.md  fairseq-1e40a48-data_language_pair_dataset.patch  pyproject.toml  pytest.ini
notebooks/Check-ConstraintsFact-Dataset-Dreyer-2023/: Check-ConstraintsFact-Dataset-Dreyer-2023-stochastic-sampling.ipynb  Check-ConstraintsFact-Dataset-Dreyer-2023.ipynb  pipeline_draft.ipynb  pipeline_prototype.py  stochastic_sampling.py
notebooks/Dreyer_2023-constraints_fact_CNN-2025-07-10/: .gitignore  dataset_stats.py  saving_beam_search_generation_word_embedding.py  stochastic_sample_pipeline_prototype.py
notebooks/Preliminary-Idea-Attention-Head-Analysis/: get_attention_head_vectors _generate.ipynb  get_attention_head_vectors.ipynb
notebooks/Prototype-baselines/: evaluation_result.py  log_probability_score.py  monte_carlo_similarity.py
summary_abstractive/: exceptions.py  logger_module.py  utils.py
summary_abstractive/commons/: data_models.py
summary_abstractive/module_model_handler/ver2/: __init__.py  module_base.py  module_fairseq_handler_full_hidden_layer.py  module_fairseq_handler_word_embeddings.py  module_obtain_word_embedding.py  module_statics.py  utils.py
tests/module_model_handler/ver2/: test_module_fairseq_handler_word_embeddings.py
tests/test_fairseq/: test_fairseq_interface.py
tests/testresources/xsum/: README.md  test_source.txt  test_target.txt
