[tool.poetry]
name = "summary_abstractive"
version = "0.1"
description = ""
authors = ["Kensuke-Mitsuzawa <kensuke.mit@gmail.com>"]
readme = "README.md"
packages = [
    {include = "summary_abstractive"}
]



[tool.poetry.dependencies]
python = "^3.9"

numpy = "<1.24"
click = "8.0.0"
click-log = "^0.4.0"
nvgpu = "^0.10.0"
datasets = "3.0.0"
torch = "<2.0.0"
logzero = "^1.7.0"
gputil = "^1.4.0"
omegaconf = "^2.3.0"
gitpython = "^3.1.44"
matplotlib = "3.6.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-resource-path = "^1.3.0"


[tool.poetry.scripts]

[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"

[build-system]
requires = ["setuptools", "poetry", "poetry_core>=1.0", "cython"]
build-backend = "poetry.core.masonry.api"